syntax = "proto3";
import "google/protobuf/empty.proto";


option java_multiple_files =  true;
option java_package = "core.run.vote";

package anime;


message AnimeRequest {
  optional string id = 1;
}

message AnimeResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string role=4;
}

message AnimeForm {
  string name = 2;
  string description = 3;
  string role=4;
}

service AnimeService {
  rpc findAll(google.protobuf.Empty) returns (stream AnimeResponse);
  rpc findOne(AnimeRequest) returns (AnimeResponse);
  rpc findMany(stream AnimeRequest) returns (stream AnimeResponse);
}